--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,15 +1,24 @@
+{% load static %}
+
 <html>
     <head>
         <title>Immah's Blog</title>
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
+        <link href="{% static 'css/base.css' %}" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <h1><a href="{% url 'home' %}">Immah's Blog</a></h1>
-            <link  href="{ static 'css/base.css' %}" rel="stylesheet">
-        </header>
         <div>
+            <header>
+                <div class="nav-left">
+                    <h1><a href="{% url 'home' %}">Immah's Blog</a></h1>
+                </div>
+                <div class="nav-right">
+                    <a href="{% url 'post_new' %}">+ New Blog Post</a>
+                </div>
+            </header>
+            
             {% block content %}
             {% endblock content %}
         </div>
     </body>
-</html>
+    </html>
